--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+$variable-columns: false;
+
+@import '../node_modules/font-awesome/css/font-awesome.min.css';
+@import '../node_modules/bulma/bulma';
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
