--- a/src/app/ban/ban-list/components/index/index.component.html
+++ b/src/app/ban/ban-list/components/index/index.component.html
@@ -1,5 +1,5 @@
-<p>
-  {{testService.id}}
-
-  <button (click)="openModal()">Open</button>
-</p>
+<div class="container">
+    <div class="notification">
+      This container is <strong>centered</strong> on desktop.
+    </div>
+  </div>
