--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,5 @@ $variable-columns: false;
 @import '../node_modules/bulma/bulma';
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
+
+@import 'styles/common';
